kubernetes/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: weight-app-service
   labels:
    name: weight-app
spec:
  selector:
    app: weight-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
